<resources>
    <string name="app_name">ذبائح الغربية</string>
    <string name="login">تسجيل الدخول</string>
    <string name="phone">رقم الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="signup">انشاء حساب</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="forgetpassword">تذكر كلمة المرور</string>
    <string name="validate_email">رقم الجوال غير صحيح</string>
    <string name="validate_passeord">كلمة المرور ضعيفة</string>
    <string name="email">البريد الالكتروني</string>
    <string name="checkNetworkConnection">تاكد من الاتصال بالانترنت</string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="basket">العربة</string>
    <string name="profile">الحساب الشخصي</string>
    <string name="orders">طلباتي</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">اسم المنتج</string>
    <string name="product_des">وصف المنتج</string>
    <string name="main_cats">الفئة</string>
    <string name="product_price">سعر المنتج</string>
    <string name="order_now">اطلب الان</string>
    <string name="add_to_basket">أضف للعربة</string>
    <string name="order_num">رقم الطلب</string>
    <string name="order_status">حالة الطلب</string>
    <string name="order_date">تاريخ الطلب</string>
    <string name="order_total_price">السعر الكلي للطلب</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="product_amount">الكمية</string>
    <string name="totalprice">السعر الاجمالي</string>
    <string name="product_details">تفاصيل الطلب</string>
    <string name="Complaints">الشكاوي</string>
    <string name="message_num">رقم الشكوي:</string>
    <string name="message_title">عنوان الرسالة</string>
    <string name="message_content">محتوي الرسالة</string>
    <string name="add_message">اضافة رسالة</string>
    <string name="send">ارسال</string>
    <string name="messaging">الشكاوي</string>
    <string name="edit_profile">تعديل الملف الشخصي</string>
    <string name="terms">الشروط و الاحكام</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="message_date">تاريخ الشكوي</string>
    <string name="about">عن التطبيق</string>
    <string name="choose_additions">اختر الاضافات</string>
    <string name="press_here">اضغط هنا للمزيد</string>
    <string name="confirm">تأكيد</string>
    <string name="complete_order">ادخل بياناتك لاستكمال الطلب</string>
    <string name="address">العنوان</string>
    <string name="name">ادخل اسمك هنا</string>
    <string name="pay_now">ادفع الان</string>
    <string name="offers">العروض</string>
    <string name="orders_details">تفاصيل الطلب</string>
    <string name="order_address">عنوان الطلب</string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="msg_subscribed">إشتراك</string>
    <string name="msg_subscribe_failed">عدم إشتراك</string>
    <string name="edit_product">تعديل منتج</string>
</resources>
