<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="addmessageviewmodel"
            type="com.alatheer.zabae7.home.messaging.AddMessageViewModel" />
    </data>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".home.messaging.AddMessageFragment"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/relative_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:background="#333333"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_message"
                android:fontFamily="@font/cairo_bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="#fbfbfb"

                android:layout_marginRight="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/backimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_vector__3_"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="21dp"/>
            <FrameLayout
                android:id="@+id/basket_frame"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/_5sdp">
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="left|center"
                    android:background="@drawable/ic_shopping_cart1" />
                <TextView
                    android:id="@+id/txt_basket_num"
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:fontFamily="@font/cairo_bold"
                    android:textSize="@dimen/_7ssp"
                    android:textColor="@color/white"
                    android:text="0"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:background="@drawable/ic_count_circle"/>
            </FrameLayout>
                <FrameLayout
                    android:id="@+id/notification_frame"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/basket_frame"
                    android:layout_marginLeft="@dimen/_2sdp">
                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"

                        android:background="@drawable/ic__6_notification" />
                    <TextView
                        android:id="@+id/txt_notification_num"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:fontFamily="@font/cairo_bold"
                        android:textSize="@dimen/_7ssp"
                        android:textColor="@color/white"
                        android:text="0"
                        android:layout_gravity="right"
                        android:gravity="center"
                        android:background="@drawable/ic_count_circle"/>

                </FrameLayout>
            </RelativeLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_add_message"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="358dp"
                android:layout_height="48dp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="right|center_vertical"
                android:background="@drawable/txt_login_background"
                android:hint="ادخل الإسم بالكامل"
                android:textColorHint="@color/lightsilver"
                android:textSize="14sp"
                android:textStyle="normal"
                android:paddingRight="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:fontFamily="@font/cairoregular"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:drawableRight="@drawable/ic_user_square_1"
                android:drawablePadding="@dimen/_7sdp"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="358dp"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/_12sdp"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="right|center_vertical"
                android:background="@drawable/txt_login_background"
                android:hint="@string/phone"
                android:textColorHint="@color/lightsilver"
                android:textSize="14sp"
                android:textStyle="normal"
                android:paddingRight="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:fontFamily="@font/cairoregular"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:drawableRight="@drawable/ic_call2"
                android:drawablePadding="@dimen/_7sdp"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:id="@+id/et_message_title"
                android:layout_width="358dp"
                android:layout_height="48dp"
                app:hintEnabled="false"
                android:gravity="right|center_vertical"
                android:background="@drawable/txt_login_background"
                android:hint="@string/message_title"
                android:textColorHint="@color/lightsilver"
                android:textSize="14sp"
                android:textStyle="normal"
                android:paddingRight="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:fontFamily="@font/cairoregular"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:drawableRight="@drawable/ic_note_text2"
                android:drawablePadding="@dimen/_7sdp"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:id="@+id/et_message_content"
                android:layout_width="358dp"
                android:layout_height="109dp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/txt_login_background"
                android:hint="@string/message_content"
                android:gravity="right|center_vertical"
                android:theme="@style/AppTheme"
                android:textSize="14sp"
                android:textStyle="normal"
                android:inputType="text"
                android:paddingRight="@dimen/_3sdp"
                android:paddingLeft="@dimen/_3sdp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cairoregular"
                android:textColorHint="@color/lightsilver"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/btn_add"
                android:layout_width="358dp"
                android:layout_height="56dp"
                android:background="@drawable/btn_login_background"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/_5sdp"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/send"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</layout>
