<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="completeorderviewmodel"
            type="com.alatheer.zabae7.home.orders.CompleteOrderViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".home.orders.CompleteOrderFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">
                    <ImageView
                        android:id="@+id/backimg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/ic_arrow_forward_black_24dp"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_semibold"
                        android:textColor="@color/lightsilver"
                        android:text="@string/complete_order"
                        android:layout_centerInParent="true"
                        android:textSize="@dimen/_13ssp"/>
                </RelativeLayout>
                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@drawable/logo2"
                    android:layout_marginTop="@dimen/_50sdp"/>
                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/txt_login_background"
                    android:hint="@string/name"
                    android:theme="@style/AppTheme"
                    android:textSize="@dimen/_13ssp"
                    android:gravity="center_vertical|right"
                    android:textStyle="normal"
                    android:inputType="text"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/lightsilver"
                    android:fontFamily="@font/cairoregular"
                    android:textColorHint="@color/lightsilver"
                    android:elevation="@dimen/_5sdp"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/txt_login_background"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:elevation="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_3sdp">
                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/txt_login_background"
                        android:hint="05XXXXXXXX"
                        android:textColorHint="@color/lightsilver"
                        android:textSize="@dimen/_12ssp"
                        android:gravity="center_vertical|right"
                        android:textStyle="normal"
                        android:fontFamily="@font/cairo_semibold"
                        android:inputType="number"
                        android:textColor="@color/lightsilver"
                        android:layout_toRightOf="@+id/country_code_picker"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_centerVertical="true"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"/>
                    <com.hbb20.CountryCodePicker
                        android:id="@+id/country_code_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_showFlag="true"
                        app:ccp_showNameCode="true"
                        android:background="@drawable/txt_login_background"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <Spinner
                    android:id="@+id/city_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/spinner_item"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textAlignment="textStart"
                    android:elevation="@dimen/_5sdp"/>
                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/btn_login_background"
                    android:textSize="@dimen/_16ssp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:elevation="@dimen/_20sdp"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/order_now"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
