<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="basketviewmodel"
            type="com.alatheer.zabae7.home.basket.BasketViewModel" />
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.basket.BasketFragment"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/relative_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="#333333"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/basket"
                android:fontFamily="@font/cairo_bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/white"

                android:layout_marginRight="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/backimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_vector__3_"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="21dp"/>
            <FrameLayout
                android:id="@+id/basket_frame"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/_5sdp">
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="left|center"
                    android:background="@drawable/ic_shopping_cart3" />
                <TextView
                    android:id="@+id/txt_basket_num"
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:fontFamily="@font/cairo_bold"
                    android:textSize="@dimen/_7ssp"
                    android:textColor="@color/white"
                    android:text="0"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:visibility="gone"
                    android:background="@drawable/ic_count_circle"/>

            </FrameLayout>
            <FrameLayout
                android:id="@+id/notification_frame"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/basket_frame"
                android:layout_marginLeft="@dimen/_2sdp">
                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"

                    android:background="@drawable/ic__6_notification" />
                <TextView
                    android:id="@+id/txt_notification_num"
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:fontFamily="@font/cairo_bold"
                    android:textSize="@dimen/_7ssp"
                    android:textColor="@color/white"
                    android:text="0"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:background="@drawable/ic_count_circle"/>

            </FrameLayout>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/basket_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_below="@+id/relative_toolbar"
            android:layout_marginBottom="169dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:backgroundTint="#FBFBFB"
            android:layout_gravity="center_horizontal"
            app:cardElevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#333333"
                    android:layout_alignParentRight="true"
                    android:text="السعر الكلي"
                    android:textSize="16sp"
                    android:fontFamily="@font/cairo_bold"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:id="@+id/txt_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/news"
                    android:layout_toRightOf="@id/total_price"
                    android:layout_marginLeft="6dp"
                    android:layout_alignParentTop="true"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/cairo_semibold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/news"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="16dp"

                    android:layout_marginTop="16dp"/>
                <Button
                    android:id="@+id/send_order"
                    android:layout_width="358dp"
                    android:layout_height="56dp"
                    android:background="@drawable/btn_order"
                    android:text="@string/pay_now"
                    android:fontFamily="@font/cairo_bold"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:paddingRight="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_15sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:elevation="@dimen/_3sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_below="@+id/txt_total_price"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>
